2010/05/26 (wololo)
- Put HBL back into partition 2. This fixes issue 133 (exit/sleep not working). Changes into malloc also fix issues with Wagic and some roms not loading in gpsp since rev 80
- Move all globals into a struct in scratchpad. This fixes issue 128 (HBL too big since rev 79)
- Fix issue 123 (devkitversion)...again :) Which should fix "firmware" errors in Daedalus
- Added a sanity "test" homebrew. If you code some changes and this homebrew reports errors : Don't submit your code!

2010/05/22 (m0skit0)
- Added scrolling menu for 40 homebrews max (thanks to MrShawman!)
- Separate mallocs for p5 and p2 (r80 and r81 malloc code was wrong)
- Included missing file lib.h
- Included some code for loading utility modules (not operating yet)
--> IMHO HBL needs a serious recoding effort...

2010/05/22 (wololo)
- Still considered as EXPERIMENTAL RELEASE
- Made the Makefile more strict
- Fixed a few issues detected by gcc
- Fixed a malloc bug that prevented Wagic from loading correctly in rev80
- Fixed issue 129

2010/05/19 (m0skit0)
- EXPERIMENTAL RELEASE
- Tested on PSP 2000 5.00 M33 & PSP Go 6.20
- Changed HBL to be loaded on memory partition 5 instead of the usual 2
--> This gives us whole parition 2 memory, and should get rid of stuff being overwritten
- I got rid of the HBL memory allocation since we actually inject HBL to partition 5
- HBL stubs are back to scratchpad (since we can't allocate p5 memory from p2)

2010/05/13 (wololo)
- added md5 functions (they can be removed and replaced by a _hook_generic_success if we are short on ram, I only added that for gpsp, but it works without it)
- added some more hooks for improved compatibility
- Added configuration file with possibility of local override on a per game basis
-- the config file allows to choose the folder in which the menu will start
