@@ -210,6 +210,18 @@ typedef struct
 	Elf32_Addr library_stubs_end;
 } tModInfoEntry;
 
+// .lib.ent
+typedef struct
+{
+	Elf32_Addr name;
+	Elf32_Half version;
+	Elf32_Half attributes;
+	BYTE       size;  //Size of exports in 64-bit words
+	BYTE       num_variables;
+	Elf32_Half num_functions;
+	Elf32_Addr exports_pointer;
+} tExportEntry;
+
 /**************/
 /* PROTOTYPES */
 /**************/
