@@ -14,6 +14,42 @@
 // Typedefs
 typedef unsigned char byte;
 
+//
+// Code
+//
+// MIPS opcodes
+#define JR_RA_OPCODE 0x03E00008
+#define NOP_OPCODE 0x00000000
+
+// To distinguish between SYSCALL and JUMP stubs
+#define SYSCALL_MASK_IMPORT 0x01000000
+#define SYSCALL_MASK_RESOLVE 0xFFF00000
+
+// Macros to construct call and jump instructions
+#define MAKE_CALL(f) (0x0c000000 | (((u32)(f) >> 2)  & 0x03ffffff))
+#define MAKE_JUMP(f) (0x08000000 | (((u32)(f) >> 2)  & 0x03ffffff))
+
+// Macros to deal with $gp register
+#define GET_GP(gp) asm volatile ("move %0, $gp\n" : "=r" (gp))
+#define SET_GP(gp) asm volatile ("move $gp, %0\n" :: "r" (gp))
+
+// Macro to get the syscall number
+#define GET_SYSCALL_NUMBER(sys) ((u32)(sys) >> 6)
+// Macro to form syscal instruction
+#define MAKE_SYSCALL(n) (0x03ffffff & (((u32)(n) << 6) | 0x0000000c))
+
+//
+// Memory
+//
+#define GAME_MEMORY_START 0x08800000
+#define GAME_MEMORY_SIZE 0x1800000
+
+// Max chars on module name
+#define MAX_MODULE_NAME_LENGTH 30
+
+// Max chars on library name
+#define MAX_LIBRARY_NAME_LENGTH 30
+
 /*
 #ifndef ULONG
 #define ULONG unsigned long
